loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:11: error: missing parameter type
    if (nbbiscuit=>3){
        ^